; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_Plink_delete.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_Plink_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.plink = type { %struct.plink* }

@plink_freelist = common dso_local global %struct.plink* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Plink_delete(%struct.plink* %0) #0 {
  %2 = alloca %struct.plink*, align 8
  %3 = alloca %struct.plink*, align 8
  store %struct.plink* %0, %struct.plink** %2, align 8
  br label %4

4:                                                ; preds = %7, %1
  %5 = load %struct.plink*, %struct.plink** %2, align 8
  %6 = icmp ne %struct.plink* %5, null
  br i1 %6, label %7, label %16

7:                                                ; preds = %4
  %8 = load %struct.plink*, %struct.plink** %2, align 8
  %9 = getelementptr inbounds %struct.plink, %struct.plink* %8, i32 0, i32 0
  %10 = load %struct.plink*, %struct.plink** %9, align 8
  store %struct.plink* %10, %struct.plink** %3, align 8
  %11 = load %struct.plink*, %struct.plink** @plink_freelist, align 8
  %12 = load %struct.plink*, %struct.plink** %2, align 8
  %13 = getelementptr inbounds %struct.plink, %struct.plink* %12, i32 0, i32 0
  store %struct.plink* %11, %struct.plink** %13, align 8
  %14 = load %struct.plink*, %struct.plink** %2, align 8
  store %struct.plink* %14, %struct.plink** @plink_freelist, align 8
  %15 = load %struct.plink*, %struct.plink** %3, align 8
  store %struct.plink* %15, %struct.plink** %2, align 8
  br label %4

16:                                               ; preds = %4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
